# maturin-marimo

./: Cargo.toml  README.md  pyproject.toml  recompile.sh
src/: lib.rs
